removed slide buttons

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <img id="image" src="assets/images/cat1.jpg">
     </div>
     
-    <button onclick="previousSlide()">Back</button>
-    <button onclick="nextSlide()">Next</button>
+    <!-- <button onclick="previousSlide()">Back</button> -->
+    <!-- <button onclick="nextSlide()">Next</button> -->
     <script src="assets/script.js"></script>
 </body>
 </html>
